2002-11-16  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Made sure all cancels and destroy_event from 
	  different popup windows are handled and destroyed properly.
	  Also made some minor fixes in new "set explicit scale" functions.
	* src/gerbv.c: Made explicit set scale also center image properly.

2002-11-15  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Robustified if someone tries to parse RS274D.
	  Happend to fix bug #639127.
	* doc/PNG-print/*: Added doc on how to print PNGs generated by gerbv.
	* src/gerbv.c: Added explicit setting of scale. Good when generating
	  PNGs for printing. Both patch and above doc is thanks to 
	  Dino Ghilardi.

2002-11-15  Andreas Andersson  <e92_aan@e.kth.se>

	* src/drill.c: Slight change to allow broken drill files from
	  Orcad386. Not pretty. But then again, neither is Orcad.

2002-11-07  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Minor cleanups, prepare idle_redraw to
	  be reentrant to allow calling it more than once (i.e.
	  for png export as well as for screen redraw).

2002-11-06  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c: Re-read some gtk-docs, we weree mistreating
	  the gtk_idle-functions. This patch fixes this and closes
	  pixmap leakage caused by complete redraw when we had a
	  preempted state.
	  Oops, you need to start the idle function at least once.

2002-11-05  Anders Eriksson  <anders@umunet.org>

	* src/gerbv.c, src/gerbv_screen.h: Removed clipping/no
	  clipping kludge since export_png now behaves as Dino
	  expects. We should make a function of common code in
	  export_png and redraw_pixmap to make it more maintainable.
	* src/gerbv.c (redraw_pixmap): Don't try to sneak out doing
	  events from redraw_pixmap, check for them and preempt if
	  there are events on queue. This closes the everythinh-is-
	  not-redrawn-sometimes bug (I hope).

2002-11-04  Stefan Petersen  <spe@stacken.kth.se>

	* src/exportimage.c, gerbv.c: export_png now export whole image