@@ -1,3 +1,7 @@
+2002-11-17  Stefan Petersen  <spe@stacken.kth.se>
+
+	* src/exportimage.c: Background color was ignored. Noticed by Dino.
+
 2002-11-16  Stefan Petersen  <spe@stacken.kth.se>
 
 	* src/gerbv.c: Made sure all cancels and destroy_event from 
